Fix issue #50 : scroll-up button that overlaps

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -217,11 +217,23 @@ button:hover {
 
 @media (max-width: 1200px) and (min-width: 769px) {
   
-    /* adjust scroll up button so it doesnt overlap */
+    /* zackbmz : adjust scroll up button so it doesnt overlap */
+    .is-shown {
+        bottom: 17px;
+        right: -11px;
+      }
+      .column-buttons {
+        margin-right: 0rem !important;
+      }
 }
 @media (max-width: 400px) {
   
-    /* adjust scroll up button so it doesnt overlap */
+    /* zackbmz : adjust scroll up button so it doesnt overlap */
+    .is-shown {
+        bottom: 3px;
+        right: -2px;
+      }
+
 }
 
 @media (max-width: 1100px){
